--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>برنامج مسجدي - لإدارة المساجد والتبرعات</title>
+    <title>برنامج مسجد - لإدارة التبرعات المساجد </title>
     <style>
         /* CSS Reset and Basic Styles */
         body, html { margin: 0; padding: 0; font-family: 'Tahoma', sans-serif; background-color: #f4f7f6; color: #333; scroll-behavior: smooth; }
@@ -53,7 +53,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">🕌 مسجدي</div>
+                <div class="logo">🕌 مسجد</div>
                 <ul>
                     <li><a href="#home">الرئيسية</a></li>
                     <li><a href="#features">المميزات</a></li>
@@ -66,7 +66,7 @@
     <main id="home">
         <section class="hero">
             <div class="container">
-                <h1>برنامج مسجدي: الإدارة المتكاملة للمساجد والتبرعات</h1>
+                <h1>برنامج مسجد: الإدارة المتكاملة للمساجد والتبرعات</h1>
                 <p>أداة سطح مكتب بسيطة وقوية لتنظيم بيانات المساجد، متابعة التبرعات، وإصدار التقارير الاحترافية بضغطة زر.</p>
                 <div class="hero-buttons">
                     <a href="YOUR_GITHUB_RELEASE_LINK_HERE" class="btn">تحميل مجاني لنظام ويندوز</a>
