--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <a href="YOUR_GITHUB_RELEASE_LINK_HERE" class="btn">تحميل مجاني لنظام ويندوز</a>
                 </div>
                 <div class="hero-mockup">
-                    <img src="main-screenshot.png" alt="الواجهة الرئيسية لبرنامج مسجدي">
+                    <img src="main-screenshot.PNG" alt="الواجهة الرئيسية لبرنامج مسجدي">
                 </div>
             </div>
         </section>
@@ -102,9 +102,9 @@
         <div class="container">
             <h2>معرض صور البرنامج</h2>
             <div class="gallery-grid">
-                <img src="stats-screenshot.png" alt="نافذة الإحصائيات والمخططات">
-                <img src="pdf-report-screenshot.png" alt="نموذج تقرير PDF">
-                <img src="search-screenshot.png" alt="البحث والتصفية في البرنامج">
+                <img src="stats-screenshot.PNG" alt="نافذة الإحصائيات والمخططات">
+                <img src="pdf-report-screenshot.PNG" alt="نموذج تقرير PDF">
+                <img src="search-screenshot.PNG" alt="البحث والتصفية في البرنامج">
             </div>
         </div>
     </section>
