--- a/index.html
+++ b/index.html
@@ -4,48 +4,135 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>برنامج مسجد - لإدارة التبرعات المساجد </title>
-    <style>
-        /* CSS Reset and Basic Styles */
-        body, html { margin: 0; padding: 0; font-family: 'Tahoma', sans-serif; background-color: #f4f7f6; color: #333; scroll-behavior: smooth; }
-        .container { max-width: 1100px; margin: 0 auto; padding: 0 20px; }
-        a { text-decoration: none; color: #007bff; }
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 
-        /* Header */
-        header { background-color: #fff; padding: 15px 0; border-bottom: 1px solid #eee; position: sticky; top: 0; z-index: 1000; }
+    <style>
+        /* 1. إعدادات أساسية ومتغيرات للألوان والخطوط */
+        :root {
+            --primary-color: #005c97; /* درجة أزرق حديثة */
+            --secondary-color: #363795;
+            --background-color: #f8f9fa; /* خلفية رمادية فاتحة جداً */
+            --text-color: #343a40; /* لون نص داكن مريح للعين */
+            --heading-font: 'Cairo', sans-serif;
+            --body-font: 'Cairo', sans-serif;
+        }
+
+        body, html { 
+            margin: 0; 
+            padding: 0; 
+            font-family: var(--body-font); 
+            background-color: var(--background-color); 
+            color: var(--text-color); 
+            scroll-behavior: smooth; 
+        }
+        .container { max-width: 1100px; margin: 0 auto; padding: 0 20px; }
+        a { text-decoration: none; color: var(--primary-color); }
+        h1, h2, h3 { font-family: var(--heading-font); font-weight: 700; }
+
+        /* 2. تحسين الهيدر (Header) */
+        header { 
+            background-color: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(10px); /* تأثير زجاجي شفاف */
+            padding: 15px 0; 
+            border-bottom: 1px solid #dee2e6; 
+            position: sticky; 
+            top: 0; 
+            z-index: 1000;
+        }
         nav { display: flex; justify-content: space-between; align-items: center; }
-        .logo { font-size: 24px; font-weight: bold; }
+        .logo { font-size: 26px; font-weight: bold; }
         nav ul { list-style: none; margin: 0; padding: 0; display: flex; }
         nav ul li { margin-right: 25px; }
         nav ul li a { font-size: 16px; font-weight: 500; transition: color 0.3s; }
-        nav ul li a:hover { color: #0056b3; }
+        nav ul li a:hover { color: var(--secondary-color); }
 
-        /* Hero Section */
-        .hero { background: #fff; text-align: center; padding: 80px 20px; }
-        .hero h1 { font-size: 42px; margin-bottom: 15px; color: #1a2533; }
-        .hero p { font-size: 18px; margin-bottom: 30px; color: #555; max-width: 600px; margin-left: auto; margin-right: auto; line-height: 1.6; }
-        .hero-buttons .btn { background-color: #007bff; color: #fff; padding: 15px 30px; border-radius: 5px; font-size: 18px; font-weight: bold; display: inline-block; transition: background-color 0.3s; }
-        .hero-buttons .btn:hover { background-color: #0056b3; }
-        .hero-mockup { margin-top: 50px; }
-        .hero-mockup img { max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
+        /* 3. تحسين القسم الرئيسي (Hero Section) */
+        .hero { 
+            background: #fff; 
+            text-align: center; 
+            padding: 100px 20px; 
+        }
+        .hero h1 { 
+            font-size: 48px; 
+            margin-bottom: 20px; 
+            color: #1a2533; 
+            line-height: 1.3;
+        }
+        .hero p { 
+            font-size: 18px; 
+            margin-bottom: 35px; 
+            color: #555; 
+            max-width: 650px; 
+            margin-left: auto; 
+            margin-right: auto; 
+            line-height: 1.7; 
+        }
+        .hero-buttons .btn { 
+            background-image: linear-gradient(45deg, var(--primary-color), var(--secondary-color)); /* تدرج لوني للزر */
+            color: #fff; 
+            padding: 16px 35px; 
+            border-radius: 8px; /* حواف دائرية أكثر */
+            font-size: 18px; 
+            font-weight: bold; 
+            display: inline-block; 
+            transition: transform 0.3s, box-shadow 0.3s; 
+            box-shadow: 0 4px 15px rgba(0, 92, 151, 0.2); /* ظل ناعم للزر */
+        }
+        .hero-buttons .btn:hover { 
+            transform: translateY(-3px); /* تأثير حركة للأعلى عند المرور */
+            box-shadow: 0 7px 20px rgba(54, 55, 149, 0.3);
+        }
+        .hero-mockup img { 
+            max-width: 100%; 
+            height: auto; 
+            border-radius: 12px; /* حواف دائرية أكثر */
+            box-shadow: 0 15px 40px rgba(0,0,0,0.12); 
+        }
 
-        /* Features Section */
-        .features { padding: 80px 0; text-align: center; }
-        .features h2 { font-size: 36px; margin-bottom: 50px; }
+        /* 4. تحسين قسم المميزات (Features Section) */
+        .features { padding: 100px 0; text-align: center; }
+        .features h2 { font-size: 40px; margin-bottom: 60px; }
         .features-grid { display: flex; justify-content: center; gap: 40px; flex-wrap: wrap; }
-        .feature-item { background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); max-width: 300px; }
-        .feature-item h3 { font-size: 22px; margin-bottom: 10px; }
-        .feature-item p { line-height: 1.6; }
+        .feature-item { 
+            background: #fff; 
+            padding: 35px; 
+            border-radius: 12px; 
+            box-shadow: 0 8px 25px rgba(0,0,0,0.07); /* ظل أنعم وأوضح */
+            max-width: 300px; 
+            transition: transform 0.3s, box-shadow 0.3s; /* إضافة حركة ناعمة */
+        }
+        .feature-item:hover {
+            transform: translateY(-8px); /* حركة للأعلى */
+            box-shadow: 0 12px 35px rgba(0,0,0,0.1); /* ظل أكبر عند المرور */
+        }
+        .feature-item h3 { font-size: 22px; margin-bottom: 15px; }
+        .feature-item p { line-height: 1.7; color: #666; }
 
-        /* Gallery Section */
-        .gallery { padding: 80px 0; background: #fff; }
-        .gallery h2 { text-align: center; font-size: 36px; margin-bottom: 50px; }
-        .gallery-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; }
-        .gallery-grid img { width: 100%; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: transform 0.3s; }
-        .gallery-grid img:hover { transform: scale(1.05); }
+        /* 5. تحسين معرض الصور (Gallery Section) */
+        .gallery { padding: 100px 0; background: #fff; }
+        .gallery h2 { text-align: center; font-size: 40px; margin-bottom: 60px; }
+        .gallery-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; }
+        .gallery-grid img { 
+            width: 100%; 
+            border-radius: 12px; 
+            box-shadow: 0 8px 25px rgba(0,0,0,0.08); 
+            transition: transform 0.3s, box-shadow 0.3s; 
+        }
+        .gallery-grid img:hover { 
+            transform: scale(1.05); /* تكبير بسيط */
+            box-shadow: 0 15px 40px rgba(0,0,0,0.15); /* ظل أكبر */
+        }
 
-        /* Footer */
-        footer { background-color: #1a2533; color: #fff; text-align: center; padding: 40px 20px; }
-
+        /* 6. تحسين الفوتر (Footer) */
+        footer { 
+            background-color: #1a2533; 
+            color: #adb5bd; /* لون أفتح قليلاً */
+            text-align: center; 
+            padding: 50px 20px; 
+        }
     </style>
 </head>
 <body>
@@ -83,14 +170,23 @@
             <h2>أهم المميزات</h2>
             <div class="features-grid">
                 <div class="feature-item">
+                    <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="var(--primary-color)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-bottom: 15px;">
+                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle>
+                    </svg>
                     <h3>إدارة مركزية للبيانات</h3>
                     <p>سجل جميع مساجد منطقتك في قاعدة بيانات SQLite محلية، مع سهولة البحث والتصفية بالاسم، الدائرة، أو البلدية.</p>
                 </div>
                 <div class="feature-item">
+                     <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="var(--primary-color)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-bottom: 15px;">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline>
+                    </svg>
                     <h3>تقارير PDF احترافية</h3>
                     <p>أنشئ تقارير PDF مفصلة لكل دائرة على حدة، أو تقريراً شاملاً لجميع الدوائر، جاهزة للطباعة والمشاركة.</p>
                 </div>
                 <div class="feature-item">
+                    <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="var(--primary-color)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-bottom: 15px;">
+                        <path d="M18 20V10"></path><path d="M12 20V4"></path><path d="M6 20V14"></path>
+                    </svg>
                     <h3>لوحة معلومات مرئية</h3>
                     <p>احصل على نظرة شاملة وفورية على إحصائيات التبرعات ونسب السداد من خلال المخططات البيانية التفاعلية.</p>
                 </div>
@@ -111,7 +207,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2025 برنامج مسجدي. جميع الحقوق محفوظة.</p>
+            <p>© 2025 برنامج تبرعات المساجد . جميع الحقوق محفوظة.</p>
         </div>
     </footer>
 
