--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <h1>برنامج مسجد: الإدارة المتكاملة للمساجد والتبرعات</h1>
                 <p>أداة سطح مكتب بسيطة وقوية لتنظيم بيانات المساجد، متابعة التبرعات، وإصدار التقارير الاحترافية بضغطة زر.</p>
                 <div class="hero-buttons">
-                    <a href="YOUR_GITHUB_RELEASE_LINK_HERE" class="btn">تحميل مجاني لنظام ويندوز</a>
+                    <a href="https://www.dropbox.com/scl/fi/2qq2dfslg1uqj49wqh8kg/Setup1.msi?rlkey=8ne22akfzs46sa5ymw4u7pu6n&dl=1" class="btn">تحميل مجاني لنظام ويندوز</a>
                 </div>
                 <div class="hero-mockup">
                     <img src="main-screenshot.PNG" alt="الواجهة الرئيسية لبرنامج مسجدي">
